<resources>
    <string name="app_name">ObjectS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="title_activity_brick">BrickActivity</string>
    <string name="title_activity_control">ControlActivity</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="discover">Discover</string>
    <string name="connect">Connect</string>
    <string name="get_paired_devices">Get Paired Devices</string>
    <string name="control">Control</string>
    <string name="textview">TextView</string>
    <string name="calibrate">calibrate</string>
    <string name="auto">Auto</string>
    <string name="init">Init</string>
    <string name="speed_up">Speed up</string>
    <string name="slow_down">Slow down</string>
    <string name="stop">Stop</string>
    <string name="kill">Kill</string>
    <string name="title_activity_accelerometer">AccelerometerActivity</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="kill_again">Kill again?</string>
    <string name="connect_to_mac">Connect to mac</string>
</resources>
