<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_control"
        tools:context=".ControlActivity">

    <Button
            android:text="@string/right"
            android:layout_width="114dp"
            android:layout_height="70dp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonRight"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/buttonDown"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/left"
            android:layout_width="114dp"
            android:layout_height="70dp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonLeft"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/buttonDown"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/up"
            android:layout_width="114dp"
            android:layout_height="70dp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonUp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/buttonDown"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/down"
            android:layout_width="114dp"
            android:layout_height="70dp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonDown"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/textview"
            android:minWidth="200dp"
            android:layout_width="208dp"
            android:layout_height="27dp"
            android:id="@+id/connectedView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/init"
            android:minWidth="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonInit" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/connectedView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/control"
            android:minWidth="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonCont" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonInit" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
    />
    <Button
            android:text="@string/speed_up"
            android:minWidth="200dp"
            android:layout_width="96dp"
            android:layout_height="55dp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonSpeedUp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonRight" app:layout_constraintStart_toEndOf="@+id/buttonUp"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/slow_down"
            android:minWidth="200dp"
            android:layout_width="96dp"
            android:layout_height="55dp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonSlowDown"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonLeft" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonUp"/>
    <Button
            android:text="@string/stop"
            android:minWidth="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonStop"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.482"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/buttonAuto"/>
    <Button
            android:text="@string/auto"
            android:minWidth="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonAuto" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonCont" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>